[package]
name = "hues"
version = "0.1.0"
authors = ["bluecookies <landentire@gmail.com>"]

[dependencies]
zip = "0.3.0"
rodio = "0.6.0"
simplemad = "0.8.1"
xml-rs = "0.7"
rand = "0.4"
glob = "0.2.11"
toml = "0.4"
serde_derive = "1.0"
serde = "1.0.27"

[dependencies.sdl2]
features = ["use_mac_framework", "mixer", "image", "ttf", "unsafe_textures"]
version = "0.31.0"

[profile.dev]
opt-level = 1